--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=BikeShop
 
-spring.datasource.url=jdbc:postgresql://${DATABASE_URL}
+spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 allowed.origins=http://localhost:5173,https://https://bikeshopfrontend.onrender.com/
 
